# yt-playlist-sync

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/ytpsync/: __init__.py  __main__.py  argumentparser.py  downloader.py
